--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(da_project2)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(da_project2 main.cpp)
+add_executable(da_project2 main.cpp
+        Reader.h)
