--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,7 @@ project(da_project2)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(da_project2 main.cpp
-        Reader.h)
+        Reader.h
+        Menu.cpp
+        Menu.h
+)
