Dynamic solver - needs to be tested

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,5 @@ add_executable(da_project2 main.cpp
         Menu.h
         BruteForceSolver.cpp
         BruteForceSolver.h
+        DynamicSolver.cpp
 )
